EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==4/03/2009==
Congdar: Bots - Added Healing and Lifetap AA's and Focus Effect support

==3/29/2009==
Derision: SoF - OP_PetBuffWindow, OP_Charm, OP_Stun

==3/28/2009==
Derision: SoF - Tasks now work.
Derision: SoF - OP_Sacrifice, OP_Sound, OP_OnLevelMessage, OP_PopupResponse
Derision: Item Links in Task Descriptions are now formatted correctly based on the client version.

==3/25/2009==
Derision: 'Hack' to display Froglok/Drakkin corpses correctly.
Derision: SoF - OP_Translocate & OP_LevelAppearance

==3/23/2009==
Trevius: SoF - Corrected Right Click item effects so they no longer fizzle
Trevius: SoF - Right Clickable item effects with set recast delays now observe that delay properly
Trevius: SoF - Item Effect Charges now get used and updated properly
Trevius: SoF - Food and Drink are now consumed at the proper rates

==3/21/2009==
Derision: Implemented 'Your total time entitled on this account' in /played.

==3/20/2009==
Trevius: SoF - Fixed a fairly major crashed caused when attempting to use the 8 new bank slots, or shared bank
Trevius: SoF - Banking is now fully functional including the 8 new bank slots, shared bank and bag slots in the bank
Trevius: SoF - Bandolier and Potion Belt are now both functional
Trevius: SoF - Filled in multiple missing opcodes

==3/19/2009==
Trevius: SoF - Grouping should now be fully functional
Trevius: SoF - (Xinu) Added many missing opcodes
Angelox: Bots- More mobs for the "#bot track rare" filter.
Derision: Fixed memory leak in Chatserver /announce processing.

==3/15/2009==
Trevius: SoF - Tradeskill Objects/Containers and Augment Pools should now be fully functional
Trevius: SoF - PC to PC/NPC trading should now be fully functional without bugs
Trevius: SoF - Auto-Consume and Right Click consume of food/drink is functional